--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <P>Página HTMl</P>
     <p>Alteração após o intervalogit </p>
-    
+    <P>Alteração feita diretamente no editor do github</P>
 </body>
 </html>
