inclusao do CSS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+
 </head>
 <body>
+    <div class="container"> 
     <P>Página HTMl</P>
     <p>Alteração após o intervalogit </p>
     <P>Alteração feita diretamente no editor do github</P>
+    </div>
 </body>
 </html>
